# ffs-central

./: CMakeLists.txt  COPYING  Doxyfile  FindSimgear.cmake  INSTALL  README  TODO  config.h.cmake  hisc-app-kfreeflight.svgz  kfreeflight.cpp  kfreeflight.desktop  kfreeflight.h  kfreeflight.kcfg.cmake  kfreeflightui.rc  kfreeflightview.cpp  kfreeflightview.h  kfreeflightview_base.ui  main.cpp  metar.cpp  metar.h  metar.txt  opt_aircraft.cpp  opt_aircraft.h  opt_airport.cpp  opt_airport.h  opt_carrier.cpp  opt_carrier.h  opt_common.cpp  opt_common.h  opt_datetime.cpp  opt_datetime.h  opt_flightplan.cpp  opt_flightplan.h  opt_network.cpp  opt_network.h  opt_othersopt.cpp  opt_othersopt.h  opt_position.cpp  opt_position.h  opt_property.cpp  (+74 more)
cmake/: FindPlib.cmake  FindSimgear.cmake
doc/: CMakeLists.txt  index.docbook
pics/: CMakeLists.txt  makelocolor.sh
pics/hicolor/: CMakeLists.txt
pics/locolor/: CMakeLists.txt
po/: CMakeList.txt
po/fr/: CMakeLists.txt  kfreeflight.po
web/: index.html  index.php  jquery.li-scroller.1.0.js  kfreeflight.css  kfreeflight.js
